Autoscroll has priority over wheel scrolling.

On autoscroll start the mouse_wheel_phase_handler_ ends the current
scrolling sequence(if such exists). While Autoscrolling wheel events
in the mouse wheel event queue are ignored and once autoscrolling ends
the mouse_wheel_event_queue resumes processing wheel events normally.

This change is identical to giving priority to touchscreen scrolling
over wheel scrolling and it is done to make sure that attempting to
wheel scroll during a middle click autoscroll doesn't cause unwanted GSB
/GSE generation.

Bug: 835314
Test: *.TimerBasedLatchingBreaksWithAutoscrollStart
Change-Id: Id568ee2676a6dafc2705c144ea4d92d46311b788
Reviewed-on: https://chromium-review.googlesource.com/1011457
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554496}
Former-commit-id: 71f099520097b050b6c9363391fde6c758e0aa9b