content/browser/renderer_host/render_widget_host_view_android.h
@@ -335,6 +335,8 @@ class CONTENT_EXPORT RenderWidgetHostViewAndroid
   void LostFocus();
 
  private:
+  MouseWheelPhaseHandler* GetMouseWheelPhaseHandler() override;
+
   void RunAckCallbacks();
 
   bool ShouldRouteEvents() const;
