content/browser/renderer_host/render_widget_host_view_base.h
@@ -79,6 +79,7 @@ namespace content {
 class BrowserAccessibilityDelegate;
 class BrowserAccessibilityManager;
 class CursorManager;
+class MouseWheelPhaseHandler;
 class RenderWidgetHostImpl;
 class RenderWidgetHostViewBaseObserver;
 class SyntheticGestureTarget;
@@ -476,6 +477,8 @@ class CONTENT_EXPORT RenderWidgetHostViewBase
   // changes.
   virtual void SetShowingContextMenu(bool showing) {}
 
+  virtual void OnAutoscrollStart();
+
   // Returns the associated RenderWidgetHostImpl.
   RenderWidgetHostImpl* host() const { return host_; }
 
@@ -541,6 +544,8 @@ class CONTENT_EXPORT RenderWidgetHostViewBase
   explicit RenderWidgetHostViewBase(RenderWidgetHost* host);
 
   void NotifyObserversAboutShutdown();
+
+  virtual MouseWheelPhaseHandler* GetMouseWheelPhaseHandler();
 
 #if defined(USE_AURA)
   virtual void ScheduleEmbed(
